# solmate-optimizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/solmate_optimizer/: __main__.py  history.py  logic.py  main.py  plot.py  status.py
tests/: test_logic.py
